--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>index.html</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>index.html</title>
 </head>
 <body>
-<h1>asdassssssssssssdasd</h1>
+{%for x in range(0, len)%}
+<div class="card" style="width: 18rem;">
+    <div class="card-header">
+        {{d['data'][x]['properties']['name']}}
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">{{d['data'][x]['geometry']['coordinates'][0]}}</li>
+        <li class="list-group-item">{{d['data'][x]['geometry']['coordinates'][1]}}</li>
+
+    </ul>
+</div>
+
+
+sdasd
+
 </body>
 
 </html>
