--- a/templates/create.html
+++ b/templates/create.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
             <label>lat</label>
-            <input class="form-control" name="lat" placeholder="Insert Latitude" type="text">
+            <input class="form-control" name="lat" placeholder="Insert Latitude " type="text">
         </div>
         <div class="form-group">
             <label>lon</label>
@@ -34,7 +34,7 @@
         <button class="btn btn-primary" type="submit">Create</button>
     </form>
 </div>
-<script>alert("prompt")</script>
+<!--<script>alert("prompt")</script>-->
 </body>
 
 </html>
