--- a/templates/add.html
+++ b/templates/add.html
@@ -17,37 +17,42 @@
 {% block content %}
 <div class="container py=4">
 
-<h2>Add Record</h2>
-<form class="p-3 mx-auto form-group" action="" method="post">
-    <div class="form-group">
-        <div class="form-group  required">
-            <label class="control-label" for="name">Name</label>
-            <input autocomplete="off" class="input-sm" id="name" name="name" required="" type="text"
-                   value="">
-
-        </div>
-        <p>
-        <div class="form-group  required">
-            <label class="control-label" for="lat">Latitude</label>
-            <input autocomplete="off" class="input-sm" id="latitude" name="lat" required="" type="text"
-                   value="">
-
-        </div>
-
-        </p>
-        <p>
-        <div class="form-group  required">
-            <label class="control-label" for="lon">Name</label>
-            <input autocomplete="off" class="input-sm" id="lon" name="lon" required="" type="text"
-                   value="">
-
-        </div>
-        </p>
+    <h2 class="text-center">Add a new coordinate record</h2>
+    <form class="p-3 mx-auto form-group" action="" method="post">
         <div class="form-group">
-            {{ form.submit(class="btn-sm btn-primary form-control ") }}
+            <div class="form-group  required">
+                <!--            <label class="control-label" for="name">Name</label>-->
+                <!--            <input autocomplete="off" class="input-sm" id="name" name="name" required="" type="text"-->
+                <!--                   value="">-->
+                {{form.name.label(class="form-control-label", for="name",)}}
+                {{ form.name(placeholder="Enter name" ,class="form-control", id="name", minlength="8") }}
+
+            </div>
+            <p>
+            <div class="form-group  required">
+                <!--            <label class="control-label" for="lat">Latitude</label>-->
+                <!--            <input autocomplete="off" class="input-sm" id="latitude" name="lat" required="" type="text"-->
+                <!--                   value="">-->
+                {{form.lat.label(class="form-control-label", for="lat")}}
+                {{ form.lat(placeholder="Enter Latitude" ,class="form-control", id="lat", type=number, min="1") }}
+
+            </div>
+
+            </p>
+            <p>
+            <div class="form-group  required">
+                {{form.lon.label(class="form-control-label", for="lon")}}
+                {{ form.lon(placeholder="Enter Longitude" ,class="form-control", id="lon") }}
+
+
+            </div>
+            </p>
+            <div class="form-group">
+                {{ form.submit(class="btn-sm btn-primary form-control ") }}
+            </div>
+
         </div>
-    </div>
-</form>
+    </form>
 </div>
 {% endblock %}
 </body>
